Fixed a bug I made

--- a/genie/web/templates/web/main.html
+++ b/genie/web/templates/web/main.html
@@ -64,7 +64,7 @@
 								<h2 style="text-align: center;">Customer Functions</h2>
 								<section class="box special">
 								<header class="major">
-									<h2>Upcoming Utah State Events for {{ profile }}</h2>
+									<h2>Upcoming Utah State Events</h2>
 									<br />
 									<div id="monthTitle"></div>
 									<script>
