updated style for map

--- a/genie/web/templates/web/map.html
+++ b/genie/web/templates/web/map.html
@@ -47,7 +47,7 @@
 						<p>{{ event.description }}</p>
 					</header>
 					<div class="box">
-						<div id="map" eventid={{ event.id }} style="height:800px; width:100%;"></div>
+						<div id="map" eventid={{ event.id }} style="height:50em; width:100%;"></div>
 
 					    <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
 					    <script
