--- a/genie/web/templates/web/map.html
+++ b/genie/web/templates/web/map.html
@@ -51,7 +51,7 @@
 
 					    <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
 					    <script
-					      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlw0MBCKArRLweJTAHNxphjw30njY9agw&callback=initMap&libraries=&v=weekly"
+					      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlw0MBCKArRLweJTAHNxphjw30njY9agw&callback=initMap&libraries=&v=weekly&map_ids=da9b4daab158add3"
 					      async
 					    ></script>
 					</div>
