--- a/genie/web/templates/web/main.html
+++ b/genie/web/templates/web/main.html
@@ -61,7 +61,7 @@
 				{% if profile.is_customer %}
 					<br />
 					<div id="customerFunctions">
-						<h2 style="text-align: center;">Customer Functions</h2>
+						<!-- <h2 style="text-align: center;">Customer Functions</h2> -->
 						<section class="box special">
 						<header class="major">
 							<h2>Upcoming Utah State Events</h2>
@@ -162,7 +162,7 @@
 				<!-- Attendant Functionality -->
 				{% if profile.is_attendant %}
 					<div id="attendantFunctions">
-						<h2 style="text-align: center;">Attendant Functions</h2>
+						<!-- <h2 style="text-align: center;">Attendant Functions</h2> -->
 						<section class="box special">
 								<span class="image featured"><img src={% static "web/images/checkIn.jpg" %} alt="" /></span>
 								<h3>Check In Customers</h3>
@@ -186,7 +186,7 @@
 				<!-- Owner Functionality -->
 				{% if profile.is_owner %}
 					<div id="ownerFunctions">
-						<h2 style="text-align: center;">Lot Owner Functions</h2>
+						<!-- <h2 style="text-align: center;">Lot Owner Functions</h2> -->
 						<div class="row">
 							<div class="col-6 col-12-narrower">
 
@@ -235,7 +235,7 @@
 				<!-- University Admin Functionality -->
 				{% if profile.is_admin %}
 					<div id="adminFunctions">
-						<h2 style="text-align: center;">University Admin Functions</h2>
+						<!-- <h2 style="text-align: center;">University Admin Functions</h2> -->
 						<section class="box special">
 								<span class="image featured"><img src={% static "web/images/desk.jpg" %} alt="" /></span>
 								<h3>Manage Upcoming USU Events</h3>
