--- a/genie/web/templates/web/signUp.html
+++ b/genie/web/templates/web/signUp.html
@@ -116,8 +116,7 @@
 								<h3>Navigate Easily with Maps</h3>
 								<p>Big Blue's Parking Genie interfaces with Google Maps API to provide high quality navigation guidance.</p>
 								<ul class="actions special">
-									<!-- For now I'm simply going to have this link point to a generic Google Maps page outside of our app -->
-									<li><a href="https://www.google.com/maps/place/Utah+State+University/@41.7452925,-111.8047787,15z/data=!4m5!3m4!1s0x87547e7defa84bed:0xfc404de6d664bd1c!8m2!3d41.745161!4d-111.8097425" class="button alt">See Map of USU</a></li>
+									<li><a href="{% url 'web:defaultMap' %}" class="button alt">See Map of USU</a></li>
 								</ul>
 							</section>
 
