Fixed cta link to My Account on main

--- a/genie/web/templates/web/main.html
+++ b/genie/web/templates/web/main.html
@@ -249,7 +249,7 @@
 					<h2>Manage Your Account</h2>
 					<p>Change account details, update your balance, access useful tools, and more.</p>
 
-					<a href="account.html" class="button alt">My Account</a>
+					<a href="{% url 'web:account' %}" class="button alt">My Account</a>
 
 				</section>
 
