Got attendant checkin dropdown to work on main, began attedant page as well

--- a/genie/web/templates/web/attendant.html
+++ b/genie/web/templates/web/attendant.html
@@ -38,8 +38,8 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<!-- TODO: add event-->
-						<h2>Check In Customers for Event</h2> <!-- Attendants navigate here from main.html after selecting an event to check in -->
+						<h2>Check In Customers for <strong>{{ event }}</strong></h2>
+						<h3>on {{ event.date }}</h3> <!-- Attendants navigate here from main.html after selecting an event to check in -->
 					</header>
 					<section class="box">
 						<div class="row">
