--- a/genie/web/templates/web/main.html
+++ b/genie/web/templates/web/main.html
@@ -233,7 +233,7 @@
 								<span class="image featured"><img src={% static "web/images/desk.jpg" %} alt="" /></span>
 								<h3>Manage Upcoming USU Events</h3>
 								<ul class="actions special">
-									<li><a href="eventManagement.html" class="button special">See All</a></li>
+									<li><a href="{% url 'web:events' %}" class="button special">See All</a></li>
 								</ul>
 								<h3>Manage Parking Lot Owners</h3>
 								<ul class="actions special">
