--- a/genie/web/templates/web/main.html
+++ b/genie/web/templates/web/main.html
@@ -237,7 +237,7 @@
 								</ul>
 								<h3>Manage Parking Lot Owners</h3>
 								<ul class="actions special">
-									<li><a href="ownerManagement.html" class="button special">See All</a></li>
+									<li><a href="{% url 'web:owners' %}" class="button special">See All</a></li>
 								</ul>
 						</section>
 					</div>
