Worked on link from main to lot-info 'View current lot reservations' to be continued

--- a/genie/web/templates/web/lotInfo.html
+++ b/genie/web/templates/web/lotInfo.html
@@ -38,7 +38,7 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<h2>Details on Parking Lot</h2>
+						<h2>Details on {{ lot }}</h2>
 					</header>
 
 					<!-- Customer Functionality -->
