--- a/genie/web/templates/web/lotManagement.html
+++ b/genie/web/templates/web/lotManagement.html
@@ -38,13 +38,14 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<h2>Lot Owner Management Page</h2>
+						<h2>Lot Management Page for Owners</h2>
 						<!-- 
 							1. View all parking spots
 							2. Edit all parking spots
 							3. Add parking spots??
 							4. View map
 								- Additional features?
+									- Attendants
 								- Change location?
 						-->
 					</header>
