Got link to lot-info correctly passing event and lot to the next view

--- a/genie/web/templates/web/main.html
+++ b/genie/web/templates/web/main.html
@@ -211,7 +211,7 @@
 											{% endfor %}
 										</select>
 										<br />
-										<select name="category" id="lot">
+										<select name="lot" id="lot">
 											<option value="">Select Parking Lot</option>
 											{% for lot in lots %}
 												{% if lot.owner == user %}
