--- a/genie/web/templates/web/main.html
+++ b/genie/web/templates/web/main.html
@@ -141,7 +141,9 @@
 											<p class="col-3">{{ reservation.event.date }}</p>
 											<a class="button alt col-3">{{ reservation.event }}</a>
 											<p class="col-3"><a data-code="{{ reservation.uuid }}" class="code">Reservation Code</a></p>
-											<p class="col-3"><a href="{% url 'web:lot-info' %}">See Lot Map and Details</a></p>
+											<form class="col-3" action="{% url 'web:lot-info' %}" method="post">
+												<input class="button" type="submit" value="See Lot Map and Details"/>
+											</form>
 										</div>
 									</li>
 								{% endfor %}
